After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 666531 - Invite IRC contacts to join room broken
Invite IRC contacts to join room broken
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Multi User Chat
2.33.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2011-12-19 14:57 UTC by Guillaume Desmottes
Modified: 2012-01-06 09:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
contact-chooser: keep a ref on the TpContact we requested (2.40 KB, patch)
2012-01-05 16:16 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2011-12-19 14:57:54 UTC
IRC room invite seems broken with master.
Comment 1 Guillaume Desmottes 2011-12-20 12:28:04 UTC
That's because of bug #666580
Comment 2 Guillaume Desmottes 2012-01-05 16:16:14 UTC
Created attachment 204695 [details] [review]
contact-chooser: keep a ref on the TpContact we requested

Kinda hacky but that's the best we can do without major changes in Folks.
Comment 3 Philip Withnall 2012-01-05 19:39:26 UTC
Review of attachment 204695 [details] [review]:

Looks good to me. However, what happens if the FolksIndividual returned by empathy_contact_chooser_dup_selected() outlives the EmpathyContactChooser? Either a ref needs to be held on the TpContact in that situation, or a note needs to be made that the FolksIndividual is only guaranteed to survive as long as the EmpathyContactChooser.
Comment 4 Guillaume Desmottes 2012-01-06 09:35:11 UTC
You're right good catch. The existing code is fine but I added a comment explaining that. Merging, thanks for the review.
Comment 5 Guillaume Desmottes 2012-01-06 09:36:47 UTC
Attachment 204695 [details] pushed as 0c03c67 - contact-chooser: keep a ref on the TpContact we requested