contact-chooser: keep a ref on the TpContact we requested

Kinda hacky but that's the best we can do without major changes in Folks.

https://bugzilla.gnome.org/show_bug.cgi?id=666531